--- a/web_chatapp/src/i18n/locales/am.json
+++ b/web_chatapp/src/i18n/locales/am.json
@@ -176,7 +176,8 @@
     "unblockContact": "እውቂያ አግባ",
     "blocked": "ታግዷል",
     "blockedMessage": "ይህ ተጠቃሚ አግዶሃል። ተጨማሪ መልእክቶች አይላኩም።",
-    "userBlocked": "ተጠቃሚ ታግዷል። በዚህ ውይይት መልእክት መላክ አይችሉም።",
+    "userBlocked": "እርስዎ ይህን ተጠቃሚ አግደዋል። በዚህ ውይይት መልእክት መላክ አይችሉም።",
+    "blockedByYouMessage": "እርስዎ ይህን ተጠቃሚ አግደዋል። ተጨማሪ መልእክቶች አይላኩም።",
     "muteNotifications": "ማሳወቂያዎችን ዝጋ",
     "disappearingMessages": "የሚጠፉ መልእክቶች",
     "disappearingMessagesDesc": "መልእክቶች ከተመረጠው ጊዜ በኋላ ከዚህ ውይይት ይጠፋሉ።",
